# KWDB

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  NOTICE.txt  README.en.md  README.md
common/: CMakeLists.txt
common/src/common/: cm_backtrace.cpp  cm_exception.cpp  cm_func.cpp  cm_kwdb_context.cpp  cm_lexer.cpp  cm_parse_expr.cpp  ee_cast_utils.cpp  ee_decimal.cpp  ee_global.cpp  ee_pg_error.cpp  ee_rpc_parser.cpp
common/src/error/: er_cfg.cpp
common/src/h/: cm_assert.h  cm_backtrace.h  cm_exception.h  cm_func.h  cm_kwdb_context.h  cm_lexer.h  cm_parse_expr.h  ee_ast_element_type.h  ee_comm_def.h  ee_encoding.h  ee_global.h  ee_iparser.h  ee_rpc_parser.h  ee_string_utils.h  ee_token_iterator.h  er_cfg.h  lg_api.h  lg_impl.h  lg_item.h  lt_latch.h  lt_rw_latch.h  mm_kmalloc.h  th_kwdb_dynamic_thread_pool.h
common/src/include/: kwdb_type.h  libcommon.h
common/src/log/: lg_impl.cpp  lg_severity.cpp  lg_writer_file.cpp
common/src/mem/: mm_kmalloc.cpp
common/src/roachpb/: br_internal_service.proto  ee_pb_plan.proto  join_type.proto  me_metadata.proto
common/util/script/: gdb_stack_merger.py
kwdbap/extension/mysql_scanner/: CMakeLists.txt
kwdbts2/: CMakeLists.txt
kwdbts2/brpc/include/: br_blocking_priority_queue.h  br_data_stream_mgr.h  br_data_stream_recvr.h  br_disposable_closure.h  br_global.h  br_internal_service.h  br_internal_service_recoverable_stub.h  br_mgr.h  br_network_util.h  br_object_pool.h  br_pass_through_chunk_buffer.h  br_priority_thread_pool.h  br_sender_queue.h  br_spinlock.h  br_stub_cache.h
kwdbts2/brpc/src/: br_data_stream_mgr.cpp  br_data_stream_recvr.cpp  br_internal_service.cpp  br_internal_service_recoverable_stub.cpp  br_mgr.cpp  br_network_util.cpp  br_pass_through_chunk_buffer.cpp  br_sender_queue.cpp
kwdbts2/brpc/tests/: br_concurrency_utils_test.cpp  br_core_types_test.cpp  br_internal_service_test.cpp  br_mgr_test.cpp  br_network_util_test.cpp  br_pass_through_chunk_buffer_test.cpp  br_recoverable_stub_internal_test.cpp  br_sender_queue_internal_test.cpp  br_streaming_integration_test.cpp
kwdbts2/common/include/: TSLockfreeOrderList.h  bitmap_utils.h  column_utils.h  explain_analyse.h  lg_commonv2.h  spin_mutex.h  spin_shared_mutex.h  sys_utils.h  ts_common.h
kwdbts2/common/src/: bitmap_utils.cpp  column_utils.cpp  sys_utils.cpp
kwdbts2/common/tests/: spin_shared_mutex_test.cpp
kwdbts2/engine/: db.cpp  duckdb_exec.cpp  engine.cpp  iterator.cpp  payload.cpp  raft_store.cpp  tag_iterator.cpp
kwdbts2/engine/include/: duckdb_exec.h  engine.h  iterator.h  payload.h  raft_store.h  settings.h  tag_iterator.h
kwdbts2/engine/tests/: db_test.cpp  db_test_base.h  payload_test.cpp  raft_store_test.cpp  tag_iterator_test.cpp  test_util.h  ts_db_test.cpp  ts_engine_range_volume_test.cpp  ts_engine_snapshot_part_test.cpp  ts_engine_snapshot_test.cpp  ts_engine_test.cpp  ts_engine_wal_perf_test.cpp  ts_engine_wal_test.cpp  ts_iterator_test.cpp  ts_meta_iterator_test.cpp  ts_offset_iterator_test.cpp  ts_payload_test.cpp  ts_tag_iterator_test.cpp
kwdbts2/exec/include/: ee_agg_scan_op.h  ee_aggregate_flow_spec.h  ee_aggregate_func.h  ee_aggregate_op.h  ee_aggregate_parser.h  ee_base_hash_table.h  ee_base_op.h  ee_base_parser.h  ee_binary_expr.h  ee_block_compress.h  ee_bswap.h  ee_cast_utils.h  ee_chunk_cursor.h  ee_combined_group_key.h  ee_common.h  ee_d2fixed_full_table.h  ee_d2s_full_table.h  ee_d2s_intrinsics.h  ee_data_chunk.h  ee_data_container.h  ee_decimal.h  ee_defer.h  ee_digit_table.h  ee_disk_data_container.h  ee_distinct_op.h  ee_distinct_parser.h  ee_dml_exec.h  ee_dynamic_hash_index.h  ee_encoding.h  ee_event_window_helper.h  ee_exec_pool.h  ee_executor.h  ee_fast_mem.h  ee_fast_string.h  ee_field.h  ee_field_common.h  ee_field_compare.h  ee_field_const.h  ee_field_func.h  ee_field_func_math.h  (+74 more)
kwdbts2/exec/src/: ee_agg_scan_op.cpp  ee_aggregate_func.cpp  ee_aggregate_op.cpp  ee_aggregate_parser.cpp  ee_base_hash_table.cpp  ee_base_op.cpp  ee_base_parser.cpp  ee_batch_data_container.cpp  ee_block_compress.cpp  ee_cancel_checker.cpp  ee_cast_utils.cpp  ee_chunk_cursor.cpp  ee_common.cpp  ee_crc32.cpp  ee_data_chunk.cpp  ee_data_chunk_container.cpp  ee_data_container.cpp  ee_decimal.cpp  ee_disk_data_container.cpp  ee_distinct_op.cpp  ee_distinct_parser.cpp  ee_dml_exec.cpp  ee_dynamic_hash_index.cpp  ee_event_window_helper.cpp  ee_exec_pool.cpp  ee_executor.cpp  ee_fast_string.cpp  ee_field.cpp  ee_field_agg.cpp  ee_field_common.cpp  ee_field_compare.cpp  ee_field_const.cpp  ee_field_func.cpp  ee_field_func_math.cpp  ee_field_func_string.cpp  ee_field_typecast.cpp  ee_field_window.cpp  ee_flow_param.cpp  ee_hash_table.cpp  ee_hash_table_tuple_data.cpp  (+60 more)
kwdbts2/exec/tests/: ee_agg_scan_op_test.cpp  ee_agg_scan_whitebox_test.cpp  ee_agg_test.cpp  ee_aggregate_func_factory_test.cpp  ee_aggregate_op_whitebox_test.cpp  ee_base_op_test.cpp  ee_block_compress_test.cpp  ee_cast_utils_test.cpp  ee_common_utils_test.cpp  ee_container_operator_test.cpp  ee_cpuinfo_test.cpp  ee_crc32_test.cpp  (+59 more)
kwdbts2/include/: libkwdbts2.h
kwdbts2/roachpb/: br_internal_service.proto  ee_pb_plan.proto  me_metadata.proto
kwdbts2/ts_engine/: skiplist.cpp  ts_LRU_block_cache.cpp  ts_agg.cpp  ts_arena.cpp  ts_batch_data_job.cpp  ts_batch_data_worker.cpp  ts_blkspan_type_convert.cpp  ts_block_segment.cpp  ts_block_segment_data.cpp  ts_block_span.cpp  ts_bloomfilter.cpp  ts_column_block.cpp  ts_comparator.cpp  ts_compressor_impl.cpp  ts_compressor_mgr.cpp  ts_del_item_manager.cpp  ts_drop_manager.cpp  ts_engine.cpp  ts_engine_schema_manager.cpp  ts_entity_partition.cpp  ts_entity_segment.cpp  ts_entity_segment_builder.cpp  ts_entity_segment_data.cpp  ts_instance_params.cpp  ts_io.cpp  ts_iterator_v2_impl.cpp  ts_last_segment.cpp  ts_lastsegment.cpp  ts_lastsegment_builder.cpp  ts_lru_block_cache.cpp  ts_mem_seg_index.cpp  ts_mem_segment.cpp  ts_metric_block.cpp  ts_metrics_table_version_manager.cpp  ts_partition_agg.cpp  ts_partition_count_mgr.cpp  ts_payload.cpp  ts_raft_store.cpp  ts_rawpayload_builder.cpp  ts_schema_utils.cpp  (+10 more)
(+2986 files in other folders)
